<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="teacher_comment_hint">¿Algo mas que nos quieras decir?</string>
    <string name="teacher_comment_title">¡ Danos tu opinion !</string>
    <string name="teacher_comment_action">Enviar Opinion</string>
    <string name="app_name">Wanmarcos</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="editPhoto">Editar Foto</string>
    <string name="editInfo">Editar Info. Pers.</string>
    <string name="editPref">Editar Prefs.</string>
    <string name="logout">Salir</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Fields-->
    <string name="lblFirstName">Nombres</string>
    <string name="lblLastName">Apellidos</string>
    <string name="lblEmail">Email</string>
    <string name="lblPassword">Password</string>
    <string name="lblReferencePlaceEvent">Lugar De Referencia</string>
    <string name="lblStartEvent">Inicio</string>
    <string name="lblEndEvent">Fin</string>
    <string name="lblDescriptionEvent">Descripción</string>
    <string name="lblLinkEvent">Link</string>
    <string name="lblHeaderFormEvent">Cuéntanos acerca del evento</string>
    <string name="lblTellUsAboutYou">¡ Cuéntanos sobre ti !</string>
    <string name="lblWelcome">¡ Bienvenido !</string>
    <string name="lblForgotPassword">¿Olvidaste tu contraseña?</string>
    <string name="lblForgotPasswordDescription">Por favor , ingresa la direccion de correo electronico asociada a la cuenta de la que quieres recuperar la contraseña.</string>
    <string name="lblRegisterFirstName">¿Cuál es tu nombre?</string>
    <string name="lblRegisterLastName">¿Cuales son tus apellidos?</string>
    <string name="lblRegisterEmail">¿Cuál es tu email?</string>
    <string name="lblRegisterPassword">¿Cuál sería tu contraseña?</string>

    <!--PlaceHolders-->

    <string name="firstNamePlaceholder">Carlos Alejandro</string>
    <string name="lastNamePlaceholder">Zerga Morales</string>
    <string name="emailPlaceholder">username@domain.com</string>
    <string name="passwordPlaceholder">**************</string>
    <string name="eventTitlePlaceholder">Nombre de Evento</string>
    <string name="eventDatePlaceholder">Diciembre 31 , 1999 23:59 hs.</string>
    <string name="eventReferencePlaceText">Lugar de Referencia de Evento</string>
    <string name="eventDescriptionPlaceholer">Descripcion de Evento de Prueba</string>
    <string name="eventLinkPlaceholder">www.testpage.com</string>
    <string name="eventNameFormPlaceholder">¿Cómo se llama el evento?</string>
    <string name="eventPlaceFormPlaceholder">¿Dónde es el evento?</string>
    <string name="eventCategoryFormPlaceholder">Dale una categoría al evento</string>
    <string name="eventLinkFormPlaceholder">Danos un link de referencia</string>
    <string name="eventDescriptionFormPlaceholder">Cuéntanos un poco acerca del Evento</string>
    <string name="contac_messagueplaceholder">Solo dilo</string>

    <!--Buttons-->
    <string name="btnRegister"><u>¿No Tienes Una Cuenta? Registrate.</u></string>
    <string name="btnRegisterForm">Registrarme</string>
    <string name="btnLogIn">INGRESAR</string>
    <string name="btnForgotPassword"><u>¿Olvidaste Tu Contraseña?</u></string>
    <string name="btnRetrievePassword">Recuperar Contraseña</string>
    <string name="btnLogout">Cerrar Sesión</string>
    <string name="btnEventStartDateForm">Dinos la Fecha de Inicio del Evento</string>
    <string name="btnEventEndDateForm">Dinos la Fecha de Fin del Evento</string>
    <string name="btnEventStartTimeForm">Dinos la Hora de Inicio del Evento</string>
    <string name="btnEventEndTimeForm">Dinos la Hora de Fin del Evento</string>
    <string name="btnEventImageForm">Danos una imágen de Referencia</string>
    <string name="btnEventScheduleForm">Evíanos el programa del evento</string>
    <string name="btnEnviarFeed">Enviar Feddback</string>
    <string name="btnDeNada">De Nada</string>
    <!--Titles-->
    <string name="title_activity_home">Noticias</string>
    <string name="title_activity_contactanos">ContactanosActivity</string>

    <!--Titles-->
    <string name="title_contactanos">Contactanos</string>

    <!--TextViews-->
    <string name="pregunta_contactanos">¿Tienes algo que decirnos?</string>
    <string name="respuesta_contactanos">Nos gustaría mucho escucharlo</string>
    <string name="popup_messague_contactanos">Gracias por decirnos lo que piensas</string>


    <!--Space-->
    <string name="raiting">Puntaje</string>
    <string name="teacher_places">Universidades:</string>
    <string name="teacher_capabilities">Capacidades:</string>

    <string name="course_name">Nombre del Curso:</string>
    <string name="course_valoration">Valoracion: </string>
    <string name="course_faculties">Facultad: </string>

    <string name="teacher_courses">Cursos que dicta: </string>
    <string name="teacher_faculties">Facultades en las que dicta: </string>
    
    <string name="Tab">\t</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_teacher">Docentes</string>
    <string name="title_activity_place">PlaceActivity</string>
    <string name="title_activity_profile">Perfil</string>
</resources>
