<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="wan.wanmarcos.activities.HomeActivity">
    <item
        android:id="@+id/action_edit_photo"
        android:title="@string/editPhoto"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_edit_info"
        android:title="@string/editInfo"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_edit_prefs"
        android:title="@string/editPref"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
