<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginBackgroundColorLight"
    tools:context="wan.wanmarcos.fragments.RegisterFragment">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/main_content"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true">

            <ImageView
                android:id="@+id/appLogo"

                style="@style/AppLogo"/>

            <TextView
                android:id="@+id/registerHeaderLablel"
                android:layout_below="@id/appLogo"

                style="@style/GatewayViewHeader"
                android:text="@string/lblTellUsAboutYou"/>

            <EditText
                android:id="@+id/email"
                android:layout_below="@id/registerHeaderLablel"

                style="@style/ScrenWideInpuText"

                android:hint="@string/lblRegisterEmail"
                android:background="@color/registerImportantFieldBackgroundLight"
                android:inputType="textEmailAddress"
                android:drawableLeft="@mipmap/ic_email_black_24dp"/>

            <EditText
                android:id="@+id/password"
                android:layout_below="@id/email"

                style="@style/ScrenWideInpuText"

                android:hint="@string/lblRegisterPassword"
                android:inputType="textPassword"
                android:background="@color/registerImportantFieldBackgroundLight"
                android:drawableLeft="@mipmap/ic_lock_black_24dp"/>

            <EditText
                android:id="@+id/first_name"
                android:layout_below="@id/password"

                style="@style/ScrenWideInpuText"

                android:hint="@string/lblRegisterFirstName"
                android:background="@color/loginInputFieldBackgroundColorLight"

                android:drawableLeft="@mipmap/ic_account_circle_black_24dp"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/last_name"
                android:layout_below="@id/first_name"

                style="@style/ScrenWideInpuText"

                android:hint="@string/lblRegisterLastName"
                android:background="@color/loginInputFieldBackgroundColorLight"
                android:drawableLeft="@mipmap/ic_supervisor_account_black_24dp" />

            <Button
                android:id="@+id/signUp"
                android:layout_below="@id/last_name"
                style="@style/ScreenWideButtomGateway"

                android:background="@color/registerButtonBackgroundColor"
                android:text="@string/btnRegisterForm"/>

            <TextView
                android:id="@+id/error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </RelativeLayout>

    </ScrollView>



</FrameLayout>
