<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center|center_horizontal"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/teacher_comment_title"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/teacher_comment_professor"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/teacher_comment_course"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/teacher_comment_faculty"/>
    <android.support.v7.widget.RecyclerView
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:id="@+id/teacher_comment_rating">
    </android.support.v7.widget.RecyclerView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/teacher_comment_hint"
        android:id="@+id/teacher_comment_post"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/teacher_comment_action"
        android:text="@string/teacher_comment_action"/>
</LinearLayout>