<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginBackgroundColorLight"
    tools:context="wan.wanmarcos.fragments.LoginFragment">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/main_content"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            >

            <ImageView
                android:id="@+id/appLogo"

                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/wanmarcosblack"
                android:layout_marginTop="80dp"/>

            <TextView
                android:id="@+id/loginHeaderLabel"
                android:layout_below="@id/appLogo"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_centerHorizontal="true"

                android:textSize="20sp"
                android:textColor="@color/loginLinkTextColorLight"
                android:text="@string/lblWelcome"/>

            <EditText
                android:id="@+id/email"
                android:layout_below="@id/loginHeaderLabel"

                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:drawablePadding="10dp"

                android:hint="@string/lblEmail"
                android:background="@color/loginInputFieldBackgroundColorLight"
                android:inputType="textEmailAddress"
                android:drawableLeft="@mipmap/ic_email_black_24dp"/>

            <EditText
                android:id="@+id/password"
                android:layout_below="@id/email"

                android:layout_width="match_parent"
                android:paddingLeft="10dp"
                android:drawablePadding="10dp"
                android:layout_height="50dp"
                android:gravity="center_vertical"

                android:hint="@string/lblPassword"
                android:background="@color/loginInputFieldBackgroundColorLight"
                android:inputType="textPassword"
                android:drawableLeft="@mipmap/ic_lock_black_24dp"
                />

            <Button
                android:id="@+id/logIn"
                android:layout_below="@id/password"

                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="55dp"
                android:elevation="10dp"
                android:textColor="@color/loginButtonTextColor"
                android:layout_marginTop="20dp"

                android:background="@color/loginButtonBackgroundColor"
                android:textSize="20sp"
                android:layout_marginBottom="40dp"
                android:text="@string/btnLogIn" />

            <TextView
                android:id="@+id/forgotPassword"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/loginLinkTextColorLight"

                android:text="@string/btnForgotPassword"
                android:layout_below="@id/logIn"
                android:layout_marginBottom="20dp"
                />

            <TextView
                android:id="@+id/signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/loginLinkTextColorLight"
                android:gravity="center"

                android:text="@string/btnRegister"
                android:layout_below="@id/forgotPassword"
                />

            <TextView
                android:id="@+id/error"
                android:layout_below="@id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

        </RelativeLayout>

    </ScrollView>



</FrameLayout>