<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginBackgroundColorLight"
    tools:context="wan.wanmarcos.fragments.RegisterFragment">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/main_content"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true">

            <ImageView
                android:id="@+id/appLogo"

                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/wanmarcosblack"
                android:layout_marginTop="80dp"
                />

            <TextView
                android:id="@+id/forgotPasswordHeaderLabel"
                android:layout_below="@id/appLogo"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"

                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/loginLinkTextColorLight"
                android:text="@string/lblForgotPassword"/>

            <TextView
                android:id="@+id/forgotPasswordDescriptionLabel"
                android:layout_below="@id/forgotPasswordHeaderLabel"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_centerHorizontal="true"

                android:textSize="17sp"
                android:layout_marginTop="5dp"
                android:textColor="@color/loginLinkTextColorLight"
                android:text="@string/lblForgotPasswordDescription"/>

            <EditText
                android:id="@+id/email"
                android:layout_below="@id/forgotPasswordDescriptionLabel"

                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:drawablePadding="10dp"

                android:hint="@string/lblRegisterEmail"
                android:background="@color/loginInputFieldBackgroundColorLight"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="30dp"
                android:drawableLeft="@mipmap/ic_email_black_24dp"/>


            <Button
                android:id="@+id/retrieveButton"
                android:layout_below="@id/email"

                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:gravity="center"
                android:elevation="10dp"
                android:textColor="@color/loginButtonTextColor"

                android:background="@color/registerButtonBackgroundColor"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:text="@string/btnRetrievePassword"/>


        </RelativeLayout>

    </ScrollView>



</FrameLayout>