<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/bar_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="2"
            tools:context="wan.wanmarcos.activities.HomeActivity">

            <include
                android:id="@+id/app_bar"
                layout="@layout/app_bar"></include>

        </LinearLayout>

        <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/main_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/bar_container"
            android:background="@android:color/white"
            tools:context="wan.wanmarcos.fragments.SuggestedEventFragment">

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@id/bar_container">

                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:weightSum="2"
                    tools:context="wan.wanmarcos.activities.HomeActivity">

                    <TextView
                        android:id="@+id/activityheader"
                        style="@style/ContactanosHeaderLabel"
                        android:layout_marginTop="20dp"
                        android:text="@string/pregunta_contactanos"
                        android:textSize="25sp"

                        />

                    <TextView
                        android:id="@+id/activitysubheader"
                        style="@style/ContactanosHeaderLabel"
                        android:layout_below="@id/activityheader"

                        android:layout_marginTop="10dp"
                        android:lines="2"
                        android:text="@string/respuesta_contactanos"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/txtComment"
                        style="@style/BigTextInput"

                        android:layout_below="@id/activitysubheader"

                        android:background="@drawable/contactanos_edittext"
                        android:hint="@string/contac_messagueplaceholder" />
                </RelativeLayout>
            </ScrollView>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/btnEnviarFeed"

                style="@style/BottomRightFAB"


                android:src="@mipmap/ic_send_white_48dp"
                android:layout_gravity="bottom|right|end"
                app:layout_anchorGravity="bottom|right|end"/>
        </android.support.design.widget.CoordinatorLayout>

    </RelativeLayout>

    <fragment
        android:id="@+id/fragment_navigation_drawer"
        style="@style/NavDrawerStyle"
        app:layout="@layout/fragment_navigation_drawer"
        tools:layout="@layout/fragment_navigation_drawer" />
</android.support.v4.widget.DrawerLayout>
